Updated Documentation and new graphics

--- a/doc/Literaturverzeichnis.bib
+++ b/doc/Literaturverzeichnis.bib
@@ -3,7 +3,7 @@
 	author = {Gülzow, Peter},
 	title = {Es’hail-2 / AMSAT Phase 4-A / Qatar-OSCAR 100},
 	url = {https://amsat-dl.org/en/eshail-2-amsat-phase-4-a/},
-    date = {09.09.2025}}
+    urldate = {09.09.2025}}
 @misc{linearTransponder, 
     title={Creating a linear transponder with an RTL-SDR, hackrf and Raspberry Pi}, 
     url={https://www.rtl-sdr.com/creating-a-linear-transponder-with-an-rtl-sdr-hackrf-and-raspberry-pi/}, 
@@ -17,21 +17,21 @@
     journal={Getting Started on the Amateur Radio Satellites (Part V)}, 
     publisher={AMSAT}, 
     author={Barker, Keith},
-    date = {12.09.2025}} 
+    urldate = {12.09.2025}} 
 @misc{CoverageEsHail2Amateur,
     url =  {https://www.n2yo.com/?s=43700},
-    date = {12.09.2025},
+    urldate = {12.09.2025},
     note = {Abdeckungsbereich von Es'Hail-2/QO-100}}
 @misc{EsHail2NarrowbandBandplan,
     url =  {https://amsat-dl.org/wp-content/uploads/2020/02/AMSAT-QO-100-NB-Transponder-Bandplan-Graph-1140x641.png},
     publisher = {AMSAT},
-    date = {15.09.2025},
+    urldate = {15.09.2025},
     note = {Bandplan des Schmallbandtransponder}}
 @misc{FrequenzplanBundesnetzagentur,
     url =  {https://data.bundesnetzagentur.de/Bundesnetzagentur/SharedDocs/Downloads/DE/Sachgebiete/Telekommunikation/Unternehmen_Institutionen/Frequenzen/20210114_frequenzplan.pdf},
     publisher = {Bundesnetzagentur},
     page = {406},
-    date = {15.09.2025},
+    urldate = {15.09.2025},
     note = {Allgemeiner Frequenzplan der Bundesnetzagentur}}
 
 #Literatur für Satelliten
@@ -49,7 +49,9 @@
     year={2014}, 
     ISBN = {9781118636473}}
 @misc{ASTRA, 
-    url={https://astra.de/astra-welt/die-welt-der-satelliten/goldgraeberstimmung-im-all}, journal={ASTRA}, 
+    url={https://astra.de/astra-welt/die-welt-der-satelliten/goldgraeberstimmung-im-all}, 
+    urldate = {},
+    journal={ASTRA}, 
     publisher={SES S.A. ASTRA}} 
 @misc{NASA_Explorer1, 
     title={Explorer 1 overview}, 
@@ -190,6 +192,27 @@
   urldate   = {2025-10-21},
   note      = {Zugriff am 21.10.2025}
 }
+@online{Wellentypen,
+  title     = {Wellentypen},
+  author    = {Studyflix},
+  year      = {2025},
+  url       = {https://studyflix.de/ingenieurwissenschaften/transversalwelle-6799},
+  urldate   = {2025-11-30},
+}
+@online{linear_polarization_image,
+  author    = {Dave3457 derivative work by RJB1},
+  title     = {Circularly Polarized Light and Linearly Polarized Light Comparison},
+  year      = {2010},
+  url       = {https://commons.wikimedia.org/w/index.php?curid=12101095},
+  urldate   = {2025-12-01}
+}
+@online{circular_polarization_image,
+  author    = {Averse},
+  title     = { Zirkulare Polarisation: Auslenkung (z. B. einer Seilwelle) in x- und y-Richtung (in Ausbreitungsrichtung beträgt sie Null) in Abhängigkeit von der Zeit und von der z-Komponente des Ortes. Rot und blau die Komponenten der Auslenkung, schwarz die 3D-Ansicht. Der Pfeil illustriert den umlaufenden Auslenkungsvektor für einen Raumpunkt.},
+  year      = {2007},
+  url       = {https://commons.wikimedia.org/w/index.php?curid=4849061},
+  urldate   = {2025-12-01}
+}
 
 
 
@@ -241,7 +264,7 @@
   author    = {Koichiro Yoshimoto},
   date      = {31 Mai 2016},
   url       = {https://www.all-electronics.de/elektronik-entwicklung/wie-schottky-dioden-die-effizienz-steigern/773704},
-  c
+  note      = {Zugriff am 11.11.2025}
 }
 @online{Burrel-diode,
   title     = {Schottky-Dioden verstehen: Eine einfache Anleitung für Anfänger},
