--- a/doc/main.tex
+++ b/doc/main.tex
@@ -22,7 +22,7 @@
 
 % Paket für das Literaturverzeichnis
 \usepackage{csquotes}
-\usepackage[backend=biber, style=numeric-comp]{biblatex} % IEEE-Zitierstil mit Biber als Backend
+\usepackage[backend=biber, style=ieee]{biblatex} % IEEE-Zitierstil mit Biber als Backend
 \addbibresource{Literaturverzeichnis.bib}       % Einbindung der Literaturdatenbank
 
 % Paket zur Nutzung der letzten Seitenzahl
