--- a/doc/Theorie_Antennen.tex
+++ b/doc/Theorie_Antennen.tex
@@ -123,14 +123,44 @@ Bestimmt wird die effektive Antennenfläche $A_\mathrm{E}$, bei verlustlosen Ant
 \begin{equation}
     A_\mathrm{E}=\frac{P_\mathrm{E}}{S_\mathrm{E}}
 \end{equation}
-Dank der Reziprozität von Antennen kann aus der effektiven Antennenfläche $A_\mathrm{E}$ auch der Gewinn $G$ der Antenne ermittelt werden und umgekehrt.
+Dank der Reziprozität von Antennen kann aus der effektiven Antennenfläche $A_\mathrm{E}$ auch der Gewinn $G$ der Antenne ermittelt werden und umgekehrt.\newline
+-> weiter ausführen
 
 
 
 
 \subsubsection*{Polarisation}
-aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
 
+
+
+Eine Antenne fungiert als eine Schnittstelle zwischen elektrischen Signalen und elektromagnetischen Wellen im freien Raum. Sie wandelt leitungsgebunde Energie in elektromagnetischen Wellen um oder umgekehrt.\newline
+Im freien Raum existieren zwei verschiedene Arten von Wellen, die Transversal- und Longitudinalwellen. Bei einer transversalen Welle erfolgen die Schwingungen senkrecht zur Ausbreitungsrichtung. Die Schwingungen einer Longitudinalwelle erfolgen in Richtung der Ausbreitung.\cite{Wellentypen}\newline
+-> Bild der Wellentypen \newline
+Bei elektromagnetischen Wellen handelt es sich um Transversalwellen. Im Gegensatz zu Lognitudalwellen können Transversalwellen polarisiert werden.\cite{Wellentypen}
+Die Polarisierung $E$ einer elektromagnetischen Welle kann als eine Funktion der Zeit $t$ angesehen werden. Sie beschreibt die Veränderung der Richtung und relative Amplitude des E-Feld Vektors, indem sie in gleichmäßigen zeitlichen Intervallen $n$ die Extremstellen der Schwingungen entlang der Ausbreitungsrichtung der elektromagnetischen Welle im Raum darstellt.\cite{Balanis_2005}\newline
+->Bild der Polarisierung einfügen\newline
+Die Polarisierung einer Antenne kann mit der Polarisierung der von ihr abgestrahlten EM-Welle beschrieben werden. Jedoch kann die Bauform und Ausrichtung einer Antenne zu unterschiedlichen Polarisierung innerhalb ihrer Strahlungscharakteristik führen. Demnach ist die Polarisierung einer Antenne abhängig vom Abstrahlwinkel $(\varphi,\theta)$, kann aber mit der Polarisierung der aus diesem Winkel abgestrahlten EM-Welle beschrieben werden.\cite{Balanis_2005}
+Im Fernfeld einer Antenne kann die von ihr abgestrahlte elektromagnetische Welle an jedem Punkt auf dem Ausbreitungspfad durch eine ebene Welle mit derselben Ausbreitungsrichtung und elektrischen Feldstärke $\vec{E}$
+angenähert werden. Dies gilt jedoch nur für Punkte, die sich tatsächlich im Fernfeldbereich und entlang des Ausbreitungspfads der Welle befinden. Im Nahfeld wirken zusätzlich statische und induktive Feldkomponenten, weshalb die Wellenfront hier noch gekrümmt ist. Mit wachsender Entfernung zur Antenne vergrößert sich der Krümmungsradius der Wellenfront. Der Einfluss der Nahfeldanteile nimmt also mit wachsender Entfernung zur Quelle ab. Für sehr große Entfernungen wird die Wellenfront lokal praktisch eben, und die elektromagnetische Welle kann hinsichtlich Ausbreitung und Polarisationsverhalten wie eine ebene Welle betrachtet werden. Diese Eigenschaft erlaubt es, die Polarisation der abgestrahlten Welle im Fernfeld durch die Polarisationsrichtung einer ebenen elektromagnetischen Welle eindeutig zu charakterisieren.\cite{Balanis_2005}\newline
+Für eine auf eine Antenne einfallende elektromagnetische Welle wird die Polarisierung als die Polarisierung einer ebenen Welle definiert, die aus einer gegebenen Richtung mit fester Leistungsflussdichte einfällt und die maximale verfügbare Leistung an den Antennenklemmen liefert.\cite{Balanis_2005}\newline
+Die Polarisierung von Antennen und EM-Wellen können in drei Arten klassifiziert. Eine Antenne oder EM-Wellen kann entweder linear, zirkular/kreisförmig oder elliptisch polarisiert sein.\cite{Balanis_2005}\newline
+Bei einer linearen Polarisierung bleibt die Richtung der Schwingung unverändert. Nur die relative Amplitude des E-Feld Vektors ändert periodisch ihren Betrag und Vorzeichen. Damit der E-Feld Vektor nur ein einer Ebene entland der Ausbreitungsrichtung der EM-Welle schwingt darf dieser nur aus einer Komponente oder aus zwei Komponenten bestehen, welche entweder in Phase oder ein vielfaches von $180\degree$ oder $\pi$ außer Phase zu einander sind.\cite{Balanis_2005}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.5\linewidth]{Bilder/Linearly_Polarized_Wave.png}
+    \caption{Arten an linearen Polarisationen\cite{linear_polarization_image}}
+    \label{LinearePolarisation}
+\end{figure}
+Die Abbildung \ref{LinearePolarisation} zeigt die unterschiedlichen Arten der linearen Polarisation. Im Bezug zu der Erdoberfläche kann eine EM-Welle vertikal linear polarisiert (blau), horizontal linear polarisiert (grün) oder schräg linear polarisiert (rot) sein.\newline
+Im Falle einer zirkularen oder kreisförmigen Polarisation bleibt die realtive Amplitude des E-Feld Vektors konstant. Jedoch rotiert der E-Feld Vektor mit konstanter Winkelgeschwindigkeit senkrecht zur Ausbreitungsrichtung. Am Ort des Beobachters zeigt E-Feld Vektor damit einen Kreis auf.\cite{Balanis_2005}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.5\linewidth]{Bilder/Rising_circular.png}
+    \caption{Zusammensetzung einer zirkularen Polarisation\cite{circular_polarization_image}}
+    \label{ZusammensetzungZirkular}
+\end{figure}
+In Abbildung \ref{ZusammensetzungZirkular} sind die Komponenten des E-Feld Vektors (blauer Pfeil) dargestellt. Der E-Feld Vektor setzt sich aus zwei einzelnen E-Feld Vektoren (Rot und Blau) zusammen, welche orthogonal zu einander stehen. Die Phasendifferenz zwischen den roten und blauen E-Feld Vektoren beträgt dabei $90\degree$ oder $\frac{\pi}{2}$ oder ein ungerade vielfaches davon.\cite{Balanis_2005}\newline
+Der Vektor des E-Feldes kann dabei gegen den Uhrzeigersinn oder im Uhrzeigersinn rotieren. Ist eine Welle im Uhrzeigersinn polarisiert, nennt man diese auch rechtshändig polarisiert (engl. right hand circularly polarized) oder auch RHCP. Ist die Welle gegen den Uhrzeigersinn polarisiert, ist von einer linkshändig polarisierten Welle (engl. left hand circularly polarized) oder LHCP die Rede.\cite{Balanis_2005}\newline
 
 
 
